[gd_scene load_steps=9 format=3 uid="uid://brwbb64oj5yj4"]

[ext_resource type="Script" path="res://scripts/menus/Pause_Menu.gd" id="1_vmxwa"]
[ext_resource type="FontFile" uid="uid://sesjq0p2svxy" path="res://assets/fonts/Spinnaker.ttf" id="2_hhonm"]
[ext_resource type="PackedScene" uid="uid://bm2frkhsku2i4" path="res://prefabs/particles/background_design.tscn" id="2_ubj3g"]
[ext_resource type="FontFile" uid="uid://bq3ebwt2pq467" path="res://assets/fonts/PirataOne.ttf" id="3_2dr2l"]
[ext_resource type="FontFile" uid="uid://bscormhptftiq" path="res://assets/fonts/MedulaOne.ttf" id="4_cjxlq"]
[ext_resource type="PackedScene" uid="uid://3hktxq1p4qdr" path="res://scenes/Menus/Options_Menu.tscn" id="5_80sc3"]
[ext_resource type="Script" path="res://nodes/SoundPool/SoundPool.gd" id="7_nafq0"]
[ext_resource type="AudioStream" uid="uid://ba2ikh20vd8ig" path="res://assets/sfx/ui/UISFX1.ogg" id="8_car08"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("SFXPool")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmxwa")
SFXPool = NodePath("SoundPool")

[node name="Background_Design" parent="." instance=ExtResource("2_ubj3g")]
modulate = Color(0.67451, 0.156863, 0.278431, 0.243137)
position = Vector2(80, -67)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0627451, 0.0705882, 0.109804, 0.588235)

[node name="PauseMenu_Holder" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu_Holder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 200.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="PauseMenu" type="Control" parent="PauseMenu_Holder/MarginContainer"]
layout_mode = 2

[node name="GWJ68" type="Label" parent="PauseMenu_Holder/MarginContainer/PauseMenu"]
layout_mode = 2
offset_right = 1680.0
offset_bottom = 77.0
size_flags_vertical = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_hhonm")
theme_override_font_sizes/font_size = 30
text = "GODOTWILDJAM
68 - FORGE"
vertical_alignment = 2

[node name="DeveloperInfo" type="Label" parent="PauseMenu_Holder/MarginContainer/PauseMenu"]
layout_mode = 2
offset_top = 815.0
offset_right = 1680.0
offset_bottom = 892.0
size_flags_vertical = 8
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_hhonm")
theme_override_font_sizes/font_size = 30
text = "VERSION 1.0
HANGOVER SUNSHINE"
horizontal_alignment = 2
vertical_alignment = 2

[node name="PM_VBoxContainer" type="VBoxContainer" parent="PauseMenu_Holder/MarginContainer/PauseMenu"]
layout_mode = 2
offset_right = 1680.0
offset_bottom = 892.0
theme_override_constants/separation = 50
alignment = 1

[node name="PM_Title" type="Label" parent="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.67451, 0.156863, 0.278431, 1)
theme_override_constants/line_spacing = -100
theme_override_fonts/font = ExtResource("3_2dr2l")
theme_override_font_sizes/font_size = 240
text = "Paused"
horizontal_alignment = 1

[node name="PM_HBoxContainer" type="HBoxContainer" parent="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PM_VBoxContainer" type="VBoxContainer" parent="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer/PM_HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PM_Continue" type="Button" parent="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer/PM_HBoxContainer/PM_VBoxContainer"]
modulate = Color(0.92549, 0.152941, 0.247059, 1)
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_cjxlq")
theme_override_font_sizes/font_size = 100
text = "Continue"

[node name="PM_Options" type="Button" parent="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer/PM_HBoxContainer/PM_VBoxContainer"]
modulate = Color(0.92549, 0.152941, 0.247059, 1)
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_cjxlq")
theme_override_font_sizes/font_size = 100
text = "Options"

[node name="PM_Leave" type="Button" parent="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer/PM_HBoxContainer/PM_VBoxContainer"]
modulate = Color(0.92549, 0.152941, 0.247059, 1)
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_cjxlq")
theme_override_font_sizes/font_size = 100
text = "Leave"

[node name="OptionsMenu" parent="." node_paths=PackedStringArray("SFXPool") instance=ExtResource("5_80sc3")]
visible = false
layout_mode = 1
SFXPool = NodePath("../SoundPool")

[node name="SoundPool" type="Node" parent="."]
script = ExtResource("7_nafq0")
randomizePitch = true
allowPitchReroll = true

[node name="SFX1" type="AudioStreamPlayer" parent="SoundPool"]
stream = ExtResource("8_car08")
bus = &"SFX"

[node name="SFX2" type="AudioStreamPlayer" parent="SoundPool"]
stream = ExtResource("8_car08")
bus = &"SFX"

[node name="SFX3" type="AudioStreamPlayer" parent="SoundPool"]
stream = ExtResource("8_car08")
bus = &"SFX"

[node name="SFX4" type="AudioStreamPlayer" parent="SoundPool"]
stream = ExtResource("8_car08")
bus = &"SFX"

[node name="SFX5" type="AudioStreamPlayer" parent="SoundPool"]
stream = ExtResource("8_car08")
bus = &"SFX"

[connection signal="mouse_entered" from="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer/PM_HBoxContainer/PM_VBoxContainer/PM_Continue" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer/PM_HBoxContainer/PM_VBoxContainer/PM_Continue" to="." method="_on_pm_continue_pressed"]
[connection signal="mouse_entered" from="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer/PM_HBoxContainer/PM_VBoxContainer/PM_Options" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="PauseMenu_Holder/MarginContainer/PauseMenu/PM_VBoxContainer/PM_HBoxContainer/PM_VBoxContainer/PM_Leave" to="." method="_on_mouse_entered"]
